--- a/CSS-Files/Home.css
+++ b/CSS-Files/Home.css
@@ -476,3 +476,17 @@ h1,h2,h3,h4,h5,h6
 {
   flex-basis: 25%;
 }
+.Main-Footer
+{
+  background: var(--Primary-Color);
+  padding: 15px;
+  text-align: center;
+  border-top: 1px solid var(--Second-Primary-Color);
+}
+.Main-Footer p
+{
+  text-transform: capitalize;
+  color: var(--Subtitle-Font-Color);
+  letter-spacing: 2px;
+  font-size: 15px;
+}
