--- a/CSS-Files/Home.css
+++ b/CSS-Files/Home.css
@@ -11,13 +11,16 @@
 /*Variables Declaration*/
 :root
 {
-  --Theme-Color: #3aafa9;
-  --Second-Theme-Color: #77a6f7;
-  --Icon-Color: #3aafa9;
-  --Primary-Color: #e9e9e9;
-  --Second-Primary-Color: #ffffff;
+  --Theme-Color: #17b978;
+  --Icon-Color: #17b978;
+  --Primary-color: #f7fafd;
+  --Second-Primary-Color: #E9F6FB;
+  --Full-White: #FFFFFF;
+  --Footer-Background:  #2a363b;
   --Title-Font-Color: #333;
+  --Title-Font-Colot-Two: #181810;
   --Subtitle-Font-Color: #333333;
+  --Subtitle-Color: #ececec;
 }
 
 html
@@ -33,6 +36,7 @@ body
   font-size: 16px;
   font-weight: 400px;
   overflow-x: hidden;
+  background: var(--Primary-color);
 }
 
 /*Initial Font-Weight*/
@@ -56,6 +60,7 @@ h1,h2,h3,h4,h5,h6
   display: flex;
   flex-flow: row wrap;
   align-items: center;
+  border-bottom: 1px solid  #8eeec7;
 }
 .Header-Items
 {
@@ -91,10 +96,10 @@ h1,h2,h3,h4,h5,h6
   display: block;
   text-decoration: none;
   text-transform: capitalize;
-  color: var(--Second-Primary-Color);
+  color: var(--Full-White);
   margin: 0 10px;
-  font-weight: bold;
-  letter-spacing: 2px;
+  /* font-weight: bold;
+  letter-spacing: 2px; */
 }
 
 /*Banner Part CSS Code*/
@@ -103,13 +108,15 @@ h1,h2,h3,h4,h5,h6
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(#3aafa98c,#3aafa98c),url("../Assets-Files/Banner.jpg");
+  /* background: linear-gradient(#3aafa98c,#3aafa98c),url("../Assets-Files/Banner.jpg"); */
+  background-color: var(--Theme-Color);
   min-height: 100vh;
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 85%, 0 100%);
 }
 .Banner-Items
 {
@@ -132,7 +139,7 @@ h1,h2,h3,h4,h5,h6
 .Banner-Left h3
 {
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 50px;
   color: var(--Second-Primary-Color);
 }
 .Banner-Left .btn
@@ -161,7 +168,7 @@ h1,h2,h3,h4,h5,h6
 /*Services CSS Code*/
 .Services-Row
 {
-  background: var(--Primary-Color);
+  background: var(--Primary-color);
   padding: 50px 0;
 }
 .Title
@@ -171,7 +178,7 @@ h1,h2,h3,h4,h5,h6
 }
 .Title h4
 {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 30px;
   color: var(--Title-Font-Color);
   letter-spacing: 2px;
@@ -183,9 +190,9 @@ h1,h2,h3,h4,h5,h6
   height: 8px;
   background: var(--Primary-Color);
   margin: 0 auto;
-  box-shadow: 2px 2px 3px #ceced1,
-              -2px -2px 3px #ffffff,
-              inset 1px 1px 2px #ceced1;
+  box-shadow: 2px 2px 3px #e7e8e9,
+              -2px -2px 3px #fafdff,
+              inset 1px 1px 2px #e7e8e9;
   border-radius: 3px;
   position: relative;
 }
@@ -228,8 +235,9 @@ h1,h2,h3,h4,h5,h6
   text-align: center;
   margin-bottom: 40px;
   padding: 25px 10px;
-  box-shadow: 2px 2px 3px #ceced1,
-              -2px -2px 3px #ffffff;
+  background: var(--Primary-color);
+  box-shadow: 4px 4px 8px #eaeaff,
+              -4px -4px 8px #ffffff;
   border-radius: 2px;
 }
 .Single-Items i
@@ -242,7 +250,7 @@ h1,h2,h3,h4,h5,h6
 {
   width: 15px;
   height: 3px;
-  background: var(--Second-Primary-Color);
+  background: var(--Full-White);
   border-radius: 2px;
   margin: 0 auto 12px auto;
   transition: .4s;
@@ -255,7 +263,7 @@ h1,h2,h3,h4,h5,h6
 .Single-Items h4
 {
   text-transform: capitalize;
-  font-size: 20px;
+  font-size: 16px;
   margin-bottom: 8px;
   color: var(--Title-Font-Color);
 }
@@ -317,19 +325,17 @@ h1,h2,h3,h4,h5,h6
 {
   text-transform: capitalize;
   font-size: 25px;
-  color: var(--Second-Primary-Color);
+  color: var(--Title-Font-Colot-Two);
 }
 .About-Left .subtitle
 {
-  text-transform: uppercase;
-  font-size: 11px;
-  font-weight: bold;
-  color: var(--Title-Font-Color);
-  letter-spacing: 2px;
+  text-transform: capitalize;
+  font-size: 13px;
+  color: var(--Subtitle-Font-Color);
 }
 .About-Left p
 {
-  color: var(--Title-Font-Color);
+  color: var(--Primary-color);
   font-size: 16px;
   margin: 15px 0;
   line-height: 25px;
@@ -340,19 +346,19 @@ h1,h2,h3,h4,h5,h6
   text-transform: uppercase;
   font-size: 13px;
   font-weight: bold;
-  color: var(--Second-Primary-Color);
+  color: var(--Title-Font-Color);
   background: var(--Theme-Color);
   padding: 12px 25px;
   display: inline-block;
-  box-shadow: 2px 2px 3px #025857ce,
-              -2px -2px 3px #43c5bf;
+  box-shadow: 2px 2px 3px #17885b,
+              -2px -2px 3px #15fca0;
   border-radius: 3px;
   transition: .5s;
 }
 .About-Left a:hover
 {
-  box-shadow: inset 1px 1px 2px#025857ce,
-              inset -1px -1px 2px#43c5bf;
+  box-shadow: inset 1px 1px 2px #17885b,
+              inset -1px -1px 2px #15fca0;
 }
 .About-Left a:hover .About-btn
 {
@@ -382,7 +388,7 @@ h1,h2,h3,h4,h5,h6
   text-transform: capitalize;
   font-size: 15px;
   font-weight: 530;
-  color: var(--Subtitle-Font-Color);
+  color: var(--Primary-color);
   display: block;
   padding: 8px 0;
   margin: 8px 0px;
@@ -394,7 +400,7 @@ h1,h2,h3,h4,h5,h6
 }
 .About-Side-Menu ul li a i
 {
-  color: var(--Primary-Color);
+  color: var(--Second-Primary-Color);
   transition: .5s;
 }
 .About-Side-Menu ul li a:hover i
@@ -407,7 +413,7 @@ h1,h2,h3,h4,h5,h6
 .Top-Footer
 {
 
-  background: var(--Primary-Color);
+  background: var(--Footer-Background);
   padding: 50px 0;
 }
 .Top-Footer-Items
@@ -426,12 +432,14 @@ h1,h2,h3,h4,h5,h6
 {
   text-transform: capitalize;
   font-size: 25px;
-  color: var(--Title-Font-Color);
+  /* color: var(--Title-Font-Color); */
+  color: #fff;
   margin-bottom: 8px;
 }
 .Footer-Items-one p
 {
-  color: var(--Subtitle-Font-Color);
+  /* color: var(--Subtitle-Font-Color); */
+  color: #c2c2c2;
   font-size: 15px;
   line-height: 24px;
 }
@@ -449,7 +457,8 @@ h1,h2,h3,h4,h5,h6
 {
   text-decoration: none;
   text-transform: capitalize;
-  color: var(--Subtitle-Font-Color);
+  /* color: var(--Subtitle-Font-Color); */
+  color: #c2c2c2;
   font-size: 15px;
   display: inline-block;
   margin: 3px 0;
@@ -464,13 +473,15 @@ h1,h2,h3,h4,h5,h6
 .Footer-Items-Two ul li a:hover,
 .Footer-Items-Three ul li a:hover
 {
-  color: var(--Icon-Color);
+  /* color: var(--Icon-Color); */
+  color: #c2c2c2;
 }
 .Footer-Items-Two ul li a:hover i,
 .Footer-Items-Three ul li a:hover i
 {
   transform: rotate(180deg);
-  color: var(--Subtitle-Font-Color);
+  /* color: var(--Subtitle-Font-Color); */
+  color: #c2c2c2;
 }
 .Footer-Items-Three
 {
@@ -478,15 +489,16 @@ h1,h2,h3,h4,h5,h6
 }
 .Main-Footer
 {
-  background: var(--Primary-Color);
+  background: var(--Footer-Background);
   padding: 15px;
   text-align: center;
-  border-top: 1px solid var(--Second-Primary-Color);
+  /* border-top: 1px solid var(--Second-Primary-Color); */
+  border-top: 1px solid #192129;
 }
 .Main-Footer p
 {
   text-transform: capitalize;
-  color: var(--Subtitle-Font-Color);
-  letter-spacing: 2px;
+  /* color: var(--Subtitle-Font-Color); */
+  color: #c2c2c2;
   font-size: 15px;
 }
