Header part responsive done

--- a/CSS-Files/Home.css
+++ b/CSS-Files/Home.css
@@ -53,54 +53,112 @@ h1,h2,h3,h4,h5,h6
 }
 
 /*Header Part CSS Code*/
-.Header-Row
-{
-  background: var(--Theme-Color);
+header{
+  position: fixed;
+  width: 100%;
   height: 80px;
+  padding: 0 100px;
   display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  border-bottom: 1px solid  #8eeec7;
-}
-.Header-Items
-{
-  display: flex;
-  flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
+  background: var(--Theme-Color);
+  z-index: 1000;
+  box-shadow: 2px 2px 2px 3px rgba(0, 0, 0, 0.158);
 }
-.Header-Items .Logo
-{
-  flex-basis: 3%;
-  margin-right: 10px;
+header img{
+  width: 30px;
 }
-.Header-Items .Logo img
-{
-  width: 100%;
+header ul{
+  position: relative;
+  display: flex;
 }
-.Header-Items .Nav-Items
-{
-  flex-basis: 87%;
-}
-.Header-Items .Nav-Items ul
-{
-  text-align: right;
+header ul li{
+  position: relative;
   list-style: none;
 }
-.Header-Items .Nav-Items ul li
-{
+header ul li a{
+  position: relative;
+  padding: 5px 10px;
+  color: #fff;
   display: inline-block;
-}
-.Header-Items .Nav-Items ul li a
-{
-  display: block;
   text-decoration: none;
-  text-transform: capitalize;
-  color: var(--Full-White);
-  margin: 0 10px;
-  /* font-weight: bold;
-  letter-spacing: 2px; */
+  cursor: pointer;
 }
+header ul li a:hover{
+  color: rgb(255, 255, 255);
+}
+.toggle{
+  display: none;
+}
+@media(max-width: 992px){
+  header ul{
+      position: absolute;
+      top: -10%;
+      left: 0;
+      width: 100%;
+      height: calc(100vh-80px);
+      padding: 50px 100px;
+      text-align: center;
+      overflow: auto;
+      transition: 1s;
+      background: var(--Footer-Background);
+      flex-direction: column;
+      opacity: 0;
+      transform: translateY(-100%);
+  }
+  header.active ul{
+      opacity: 1;
+      top: 80px;
+      transform: translateY(0);
+  }
+  header ul li a{
+      margin: 5px 0;
+      font-size: 24px;
+  }
+  .toggle{
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+  }
+  .toggle:before{
+      content: '';
+      position: absolute;
+      top: 4px;
+      width: 100%;
+      height: 2px;
+      background: #fff;
+      z-index: 1;
+      box-shadow: 0 10px 0 #fff;
+      transition: .5s;
+  }
+  .toggle:after{
+      content: '';
+      position: absolute;
+      bottom: 4px;
+      width: 100%;
+      height: 2px;
+      background: #fff;
+      z-index: 1;
+      transition: .5s;
+  }
+  header.active .toggle:before{
+      top: 14px;
+      transform: rotate(45deg);
+      box-shadow: 0 0 0 #fff;
+  }
+  header.active .toggle:after{
+      bottom: 14px;
+      transform: rotate(-45deg);
+  }
+}
+
+.show{
+  display: block;
+}
+/* Header part end here */
+
 
 /*Banner Part CSS Code*/
 .Banner-Row
@@ -116,7 +174,7 @@ h1,h2,h3,h4,h5,h6
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 92%, 0 100%);
 }
 .Banner-Items
 {
