category html file created

--- a/CSS-Files/Home.css
+++ b/CSS-Files/Home.css
@@ -11,6 +11,7 @@
 /*Variables Declaration*/
 :root
 {
+  /* --Theme-Color: #266150; */
   --Theme-Color: #17b978;
   --Icon-Color: #17b978;
   --Primary-color: #f7fafd;
